# CurveLab

./: CMakeLists.txt  CurveLabConfig.cmake.in
CurveletUtils/: README.txt  batch_edge.fig  batch_edge.m  batchwindow.fig  batchwindow.m  cmoviemaker.fig  cmoviemaker.m  crvlt_errorplot.m  crvlt_extractdirs.m  crvlt_findedges.m  crvlt_keeplargest.m  crvlt_levelseterror.m  crvlt_showdirfield.m  curvecanny_multi.m  cviewer.fig  cviewer.m  edgedetect.fig  edgedetect.m  makefile  setpath.m
CurveletUtils/src/: CurveletUtils.h  crvlt_extractdirs.cpp  crvlt_getmagnitude.cpp  crvlt_keeplargest.cpp  cu_basic_utils.cpp  cu_extractdirs.cpp  cu_mexaux.h  cu_thresholding.cpp  makefile
CurveletUtils/utils/: crvlt_anisomeas.m  crvlt_countnnz.m  crvlt_getangle.m  crvlt_getatpos.m  crvlt_getdirdata.m  crvlt_getlevels.m  crvlt_getnorms.m  crvlt_nnzperlev.m  crvlt_norm.m  crvlt_rescale.m  crvlt_sortcoeffs.m  crvlt_thresh.m  crvlt_vizaniso.m  crvlt_zeros.m  drawmovieframe.m  edgelength.m  eggshape.m  plotcurveletpos.m  plotwaveletpos.m
cmake/: CurveLabConfig.cmake.in  FindFFTW2.cmake  FindFFTW3.cmake
fdct3d/mex/: fdct3d_demo_basic.m
fdct3d/src/: CMakeLists.txt  commoninc.hpp  fdct3d.hpp  fdct3d_forward.cpp  fdct3d_forward_mex.cpp  fdct3d_inverse.cpp  fdct3d_inverse_mex.cpp  fdct3d_param.cpp  fdct3d_param_mex.cpp  fdct3dinline.hpp  mexaux.hpp  nummat.hpp  numtns.hpp  offmat.hpp  offtns.hpp  offvec.hpp  test.cpp
fdct3d_mpi/cmake/: FindPETSc.cmake  FindPackageMultipass.cmake
fdct3d_mpi/src/: CMakeLists.txt  commoninc.hpp  cpxcrvletprtd.cpp  cpxcrvletprtd.hpp  cpxnumtnsblkd.cpp  cpxnumtnsblkd.hpp  fdct3d.cpp  fdct3d.hpp  fdct3d_forward.cpp  fdct3d_inverse.cpp  fdct3d_param.cpp  fdct3dinline.hpp  nummat.hpp  numtns.hpp  numvec.hpp  offmat.hpp  offtns.hpp  offvec.hpp  test.cpp
fdct3d_outcore/src/: CMakeLists.txt  commoninc.hpp  cpxcrvletocr.cpp  cpxcrvletocr.hpp  fdct3d.hpp  fdct3d_forward.cpp  fdct3d_inverse.cpp  fdct3d_param.cpp  fdct3dinline.hpp  nummat.hpp  numtns.hpp  numvec.hpp  offmat.hpp  offtns.hpp  offvec.hpp  test.cpp
fdct_usfft_cpp/src/: CMakeLists.txt  afdct_usfft.cpp  afdct_usfft_mex.cpp  fdct_usfft.cpp  fdct_usfft.hpp  fdct_usfft_inc.hpp  fdct_usfft_inline.hpp  fdct_usfft_mex.cpp  fdct_usfft_param.cpp  fdct_usfft_param_mex.cpp  ifdct_usfft.cpp  ifdct_usfft_mex.cpp  mexaux.hpp  nummat.hpp  numvec.hpp  offmat.hpp  offvec.hpp  test.cpp
fdct_wrapping_cpp/src/: CMakeLists.txt  fdct_wrapping.cpp  fdct_wrapping.hpp  fdct_wrapping_inc.hpp  fdct_wrapping_inline.hpp  fdct_wrapping_mex.cpp  fdct_wrapping_param.cpp  fdct_wrapping_param_mex.cpp  ifdct_wrapping.cpp  ifdct_wrapping_mex.cpp  mexaux.hpp  nummat.hpp  numvec.hpp  offmat.hpp  offvec.hpp  test.cpp
fdct_wrapping_matlab/: fdct_wrapping.m  fdct_wrapping_dispcoef.m
